@@ -696,19 +696,27 @@ class DutView(object):
 
             self.data[key] = df
 
-    def save_db(self):
-        """Write a database for this dut. If it already exists it is overwritten. Does NOT save all keys starting with '_'"""
+    def save_db(self, sweep_keys=None):
+        """Write a database for this dut. If it already exists it is overwritten. Does NOT save all keys starting with '_'
+
+        Parameters
+        ----------
+        sweep_keys : list[str], optional
+            List of sweeps to save to database. Usefull if a lot of data is loaded but only a part should be saved to the hard drive database.
+
+        """
         if not self._data:
             return  # nothing to do here
 
         if self._separate_databases:
-            # find all sweeps in self.data
-            sweep_keys = []
-            for key in self._data.keys():
-                ## key is equal except for the last part -> same sweep
-                sweep_key = self.join_key(*self.split_key(key)[0:-1])
-                if sweep_key not in sweep_keys:
-                    sweep_keys.append(sweep_key)
+            if sweep_keys is None:
+                # find all sweeps in self.data
+                sweep_keys = []
+                for key in self._data.keys():
+                    ## key is equal except for the last part -> same sweep
+                    sweep_key = self.join_key(*self.split_key(key)[0:-1])
+                    if sweep_key not in sweep_keys:
+                        sweep_keys.append(sweep_key)
 
             for sweep_key in sweep_keys:
                 data_to_save = {}
